--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,74 @@
-body{
+* {
     margin: 0;
-    overflow: hidden;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    font-size: 62.5%;
+  }
+  
+  body {
+    background-color: #fff0f6;
     font-family: 'Modak', system-ui;
+  }
+  
+  .container {
+    height: 100vh;
+    margin: 0 auto;
+  
     display: flex;
     flex-direction: column;
-    background-color: #ffd2d2;
-}
-.question{
-    font-size: 50px;
-    font-weight: 400;
-    display: flex;
     align-items: center;
     justify-content: center;
-}
-.container{
-    flex: 1;
+  }
+  
+  .cat-img {
+    width: 30rem;
+    height: 30rem;
+    margin-bottom: 2rem;
+  }
+  
+  .title {
+    font-size: 3.6rem;
+    color: #F8C8DC;
+    text-shadow: 1px 1px 2px black;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  
+  .buttons {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    gap: 16px;
-}
-img {
-    min-width: 250px;
-    max-width: 250px;
+  
+    gap: 1rem;
+  }
+  
+  .btn {
+    padding: 1.5rem 2.5rem;
     border: none;
-}
-#yes-btn{
-    margin-right: 20px;
-    border-radius: 25px;
-    width: 100px;
-    height: 35px;
-    border: none;
-}
-#no-btn{
-    position: absolute;
+    border-radius: 4px;
+  
+    color: white;
+    font-size: 1.6rem;
+    font-weight: 600;
+    cursor: pointer;
+    display: inline-block;
+  }
+  
+  .btn--yes {
+    background-color: #40c057;
+  }
+  
+  .btn--no {
+    background-color: #f03e3e;
+    position: relative;
     transition: .5s;
-    width: 100px;
-    height: 35px;
-    border-radius: 25px;
-    border: none;
-}
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
